# Nimbus

./: .gitignore  README.md
apps/desktop/: pubspec.yaml
apps/desktop/lib/: main.dart
apps/desktop/lib/app/: app_shell.dart  navigation.dart  sidebar.dart  theme.dart
apps/desktop/lib/models/: download_task.dart  settings.dart
apps/desktop/lib/pages/: about_page.dart  downloads_page.dart  history_page.dart  settings_page.dart
apps/desktop/lib/services/: download_service.dart  settings_service.dart  storage.dart
apps/desktop/lib/widgets/: download_tile.dart  empty_state.dart  page_header.dart  status_pill.dart
apps/desktop/test/: widget_test.dart
core/api/: Cargo.toml
core/api/src/: api.rs  aria2.rs  main.rs
